--- a/style.css
+++ b/style.css
@@ -7,13 +7,15 @@
     font-family: 'Inter', sans-serif;
 }
 
-header {
+nav {
     width: 100%;
     height: 80px;
     background-color: #fff; 
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-left: 32px;
+    padding-right: 32px;
 }
 
 .navigation {
@@ -50,7 +52,7 @@ nav ul li a {
     color: #3A404E;
 }
 
-.navigation-actions {
+.navigation-buttons {
     display: flex;
     align-items: center;
     gap: 20px;
@@ -83,4 +85,91 @@ nav ul li a {
     padding: 10px 18px;
     color: #FFFFFF;
     cursor: pointer;
+}
+
+
+/* CABEÇALHO */
+
+header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 1440;
+    height: 407;
+    gap: 24px;
+    padding-top: 96px;
+    padding-bottom: 96px;
+
+}
+.sub-heading{
+    font-family: Inter;
+    font-weight: 600;
+    font-size: 16px;
+    color: #8E2424;
+
+}
+
+.heading-description{
+    width: 791px;
+    height: 60px;
+    font-family: Inter;
+    font-weight: 400;
+    font-size: 20px;
+    text-align: center;
+
+}
+
+
+/* SESSÃO DE MÉTRICAS */
+
+.content-metricas{
+    width: 1440;
+    height: 288;
+    gap: 64px;
+    padding-bottom: 96px;
+
+}
+.metricas{
+    width: 1280;
+    height: 192;
+    gap: 64px;
+    padding-right: 32px;
+    padding-left: 32px;
+}
+
+.metricas-group{
+    display: flex;
+    flex-direction: row;
+    width: 1216;
+    height: 192;
+    gap: 32px;    
+}
+
+.metric-item{
+    width: 280;
+    height: 168;
+    gap: 20px;    
+}
+
+.number{
+    font-family: Inter;
+    font-weight: 600;
+    font-size: 60px;
+    line-height: 72px;
+    letter-spacing: -2%;
+    color:#8E2424;
+}
+
+.text{
+    font-family: Inter;
+    font-weight: 500;
+    font-size: 18px;
+}
+
+.supporting-text{
+    font-family: Inter;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0%;
 }
