--- a/style.css
+++ b/style.css
@@ -7,14 +7,12 @@
     font-family: 'Inter', sans-serif;
 }
 
-h1{
-    font-family: Inter;
+h1 {
     font-weight: 600;
     font-size: 36px;
     line-height: 44px;
-    letter-spacing: -2%;
+    letter-spacing: -0.02em;
     text-align: center;
-
 }
 
 nav {
@@ -24,8 +22,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-left: 32px;
-    padding-right: 32px;
+    padding: 0 32px;
 }
 
 .navigation {
@@ -35,16 +32,15 @@ nav {
     max-width: 1280px;
     width: 100%;
     height: 44px;
-    padding: 0 32px;
 }
 
-#title-nav {
+.title-nav {
     font-weight: 500;
     font-size: 18px;
     color: #3A404E;
 }
 
-#logo {
+.logo {
     height: 27px;
     width: 27px;
 }
@@ -97,143 +93,120 @@ nav ul li a {
     cursor: pointer;
 }
 
-
 /* CABEÇALHO */
 
-header{
+header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 1440;
-    height: 407;
+    width: 1440px;
+    height: 407px;
     gap: 24px;
-    padding-top: 96px;
-    padding-bottom: 96px;
-
+    padding: 96px 0;
 }
-.sub-heading{
-    font-family: Inter;
+
+.sub-heading {
     font-weight: 600;
     font-size: 16px;
     color: #8E2424;
-
 }
 
-.heading-description{
+.heading-description {
     width: 791px;
     height: 60px;
-    font-family: Inter;
     font-weight: 400;
     font-size: 20px;
     text-align: center;
-
 }
-
 
 /* SESSÃO DE MÉTRICAS */
 
-.content-metricas{
-    width: 1440;
-    height: 288;
+.content-metricas {
+    width: 1440px;
+    height: 288px;
     gap: 64px;
     padding-bottom: 96px;
-
 }
-.metricas{
-    width: 1280;
-    height: 192;
+
+.metricas {
+    width: 1280px;
+    height: 192px;
     gap: 64px;
-    padding-right: 32px;
-    padding-left: 32px;
+    padding: 0 32px;
 }
 
-.metricas-group{
+.metricas-group {
     display: flex;
     flex-direction: row;
-    width: 1216;
-    height: 192;
+    width: 1216px;
+    height: 192px;
     gap: 32px;    
 }
 
-.metric-item{
-    width: 280;
-    height: 168;
+.metric-item {
+    width: 280px;
+    height: 168px;
     gap: 20px;    
 }
 
-.number{
-    font-family: Inter;
+.number {
     font-weight: 600;
     font-size: 60px;
     line-height: 72px;
-    letter-spacing: -2%;
+    letter-spacing: -0.02em;
     color:#8E2424;
 }
 
-.text{
-    font-family: Inter;
+.text {
     font-weight: 500;
     font-size: 18px;
 }
 
-.supporting-text{
-    font-family: Inter;
+.supporting-text {
     font-weight: 400;
     font-size: 16px;
-    line-height: 24px;
-    letter-spacing: 0%;
 }
 
 /* SESSÃO DE TALENTOS */
-.vagas{
-    width: 1440;
-    height: 1798;
-    gap: 64px;
-    padding-top: 96px;
-    padding-bottom: 96px;
 
+.vagas {
+    width: 1440px;
+    height: 1798px;
+    gap: 64px;
+    padding: 96px 0;
 }
 
-.container-talentos{
-    width: 1440;
-    height: 1798;
+.container-talentos {
+    width: 1440px;
+    height: 1798px;
     gap: 64px;
-    padding-top: 96px;
-    padding-bottom: 96px;
-
+    padding: 96px 0;
 }
 
-.texto-talentos{
+.texto-talentos {
     align-items: center;
     gap: 32px;
-    padding-right: 32px;
-    padding-left: 32px;
-    top: 96px;
-    left: 80px;
-    width: 1280;
-    height: 602;
+    padding: 0 32px;
+    width: 1280px;
+    height: 602px;
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
 
-#imagem-talentos{
+#imagem-talentos {
     width: 1116px;
-    height: 400;
-    top: 298px;
+    height: 400px;
 }
 
-.sub-talentos{
+.sub-talentos {
     color: #8E2424;
     background-color: #F9F4F4;
     border-radius: 10px;
     padding: 5px;
-    font-family: Inter;
     font-weight: 500;
     font-size: 14px;
     text-align: center;
-
 }
 
 .vagas-opc {
@@ -242,18 +215,15 @@ header{
 }
 
 .nome-vaga {
-    font-family: 'Inter', sans-serif;
     font-weight: 500;
     font-size: 20px;
-    line-height: 30px;
     margin-bottom: 32px;
 }
 
 .job-post {
     width: 768px;
     height: 136px;
-    gap: 24px;
-    padding: 24px 24px 24px 24px; 
+    padding: 24px;
     border-radius: 16px;
     border: 1px solid #EAECF0;
     margin-bottom: 32px;
@@ -272,7 +242,6 @@ header{
     display: flex;
     justify-content: center;
     margin-bottom: 64px;
-    
 }
 
 .info-vaga {
@@ -281,9 +250,7 @@ header{
     width: 720px;
     height: 24px;
     gap: 24px;
-    font-family: 'Inter', sans-serif;
     font-weight: 500;
     font-size: 16px;
-    line-height: 24px;
     margin-top: 32px;
 }
