--- a/style.css
+++ b/style.css
@@ -165,9 +165,6 @@ header{
     font-family: Inter;
     font-weight: 600;
     font-size: 60px;
-    line-height: 72px;
-    letter-spacing: -2%;
-    color:#8E2424;
 }
 
 .text{
@@ -186,7 +183,7 @@ header{
 
 /* SESSÃO DE TALENTOS */
 .vagas{
-    width: 1440;
+    width: 100%;
     height: 1798;
     gap: 64px;
     padding-top: 96px;
@@ -286,4 +283,50 @@ header{
     font-size: 16px;
     line-height: 24px;
     margin-top: 32px;
+}
+
+/* SESSÃO DE DEPOIMENTOS */
+.depoimentos{
+    width: 100%;
+    height: 500px;
+    padding-bottom: 96px;
+}
+
+.imagem-avatar{
+    width: 56px;
+    height: 56px;
+    border-radius: 200px;
+}
+
+.content-depoimentos{
+    width: 95%;
+    margin-left: 2.5%;
+    height: 404px;
+    border-radius: 16px;
+    padding: 38px;
+    text-align: center;
+    background-color: #C3191908;
+}
+
+.texto-depoimento{
+    font-family: Inter;
+    font-weight: 500;
+    font-size: 36px;
+   margin-top: 10px;
+}
+
+
+.atribuicao{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 32px;
+    width: 1088;
+    height: 120;
+    padding: 10px;
+}
+
+.nome-avatar{
+    margin-top: 25px;
+    margin-bottom: 12px;
 }
